--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.1.0",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^6.1.5",
     "@mui/joy": "^5.0.0-beta.48",
-    "@mui/material": "^6.1.4",
+    "@mui/material": "^6.1.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
+    "react-uuid": "^2.0.0",
+    "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
